--- a/training_report.html
+++ b/training_report.html
@@ -35,25 +35,25 @@
 <div class="container">
 <h1>SLITHER.IO NEAT BOT - TRAINING ANALYSIS</h1>
 <p>File: training_stats.csv</p>
-<p>Total evaluations: 296</p>
+<p>Total evaluations: 300</p>
 <h3>OVERALL STATISTICS</h3>
-<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>Average</th><th>Max</th><th>Min</th></tr><tr><td>Fitness</td><td>3267.8</td><td>8760.3</td><td>2148.5</td></tr><tr><td>Survival Time (s)</td><td>93.9</td><td>126.8</td><td>62.8</td></tr><tr><td>Food Eaten</td><td>27.5</td><td>46</td><td>25</td></tr><tr><td>Max Length</td><td>27.5</td><td>46</td><td>25</td></tr></table>
+<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>Average</th><th>Max</th><th>Min</th></tr><tr><td>Fitness</td><td>3270.1</td><td>8760.3</td><td>2148.5</td></tr><tr><td>Survival Time (s)</td><td>93.8</td><td>126.8</td><td>62.8</td></tr><tr><td>Food Eaten</td><td>27.5</td><td>46</td><td>25</td></tr><tr><td>Max Length</td><td>27.5</td><td>46</td><td>25</td></tr></table>
 <h3>CAUSE OF DEATH</h3>
-<h4>Deaths by Cause</h4><div style='font-family: monospace;'><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Starvation</span><span style='display: inline-block; width: 80px;'>228 (77.0%)</span><span style='display: inline-block; width: 200px; height: 20px; background-color: #4CAF50;'></span></div><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Unknown</span><span style='display: inline-block; width: 80px;'>68 (23.0%)</span><span style='display: inline-block; width: 59px; height: 20px; background-color: #4CAF50;'></span></div></div>
+<h4>Deaths by Cause</h4><div style='font-family: monospace;'><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Starvation</span><span style='display: inline-block; width: 80px;'>231 (77.0%)</span><span style='display: inline-block; width: 200px; height: 20px; background-color: #4CAF50;'></span></div><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Unknown</span><span style='display: inline-block; width: 80px;'>69 (23.0%)</span><span style='display: inline-block; width: 59px; height: 20px; background-color: #4CAF50;'></span></div></div>
 <h3>RECENT PERFORMANCE (Last 100 vs First 100)</h3>
-<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>First 100</th><th>Last 100</th><th>Change</th></tr><tr><td>Avg Fitness</td><td>3291.3</td><td>3029.9</td><td>↓ -261.4</td></tr><tr><td>Avg Food</td><td>27.8</td><td>27.4</td><td>↓ -0.5</td></tr><tr><td>Avg Length</td><td>27.8</td><td>27.4</td><td>↓ -0.5</td></tr><tr><td>Avg Survival</td><td>93.9</td><td>92.3</td><td>↓ -1.6</td></tr></table>
+<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>First 100</th><th>Last 100</th><th>Change</th></tr><tr><td>Avg Fitness</td><td>3291.3</td><td>3033.3</td><td>↓ -258.1</td></tr><tr><td>Avg Food</td><td>27.8</td><td>27.4</td><td>↓ -0.4</td></tr><tr><td>Avg Length</td><td>27.8</td><td>27.4</td><td>↓ -0.4</td></tr><tr><td>Avg Survival</td><td>93.9</td><td>92.2</td><td>↓ -1.7</td></tr></table>
 <p>Bots that ate food: 100% → 100%</p>
 <h3>TOP 10 PERFORMERS</h3>
-<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>#</th><th>GenomeID</th><th>Fitness</th><th>Time</th><th>Food</th><th>Len</th><th>Death</th></tr><tr><td>1</td><td>4</td><td>8760.3</td><td>120.1s</td><td>42</td><td>42</td><td>Unknown</td></tr><tr><td>2</td><td>136</td><td>8065.8</td><td>121.0s</td><td>39</td><td>39</td><td>Unknown</td></tr><tr><td>3</td><td>52</td><td>7487.8</td><td>122.2s</td><td>36</td><td>36</td><td>Unknown</td></tr><tr><td>4</td><td>220</td><td>6977.2</td><td>120.0s</td><td>33</td><td>33</td><td>Unknown</td></tr><tr><td>5</td><td>19</td><td>6819.1</td><td>126.2s</td><td>32</td><td>32</td><td>Unknown</td></tr><tr><td>6</td><td>17</td><td>6818.5</td><td>124.8s</td><td>32</td><td>32</td><td>Unknown</td></tr><tr><td>7</td><td>95</td><td>6658.3</td><td>126.8s</td><td>31</td><td>31</td><td>Unknown</td></tr><tr><td>8</td><td>96</td><td>6616.9</td><td>125.7s</td><td>31</td><td>31</td><td>Unknown</td></tr><tr><td>9</td><td>271</td><td>6593.1</td><td>124.4s</td><td>31</td><td>31</td><td>Unknown</td></tr><tr><td>10</td><td>122</td><td>6572.8</td><td>124.2s</td><td>31</td><td>31</td><td>Unknown</td></tr></table>
+<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>#</th><th>GenomeID</th><th>Fitness</th><th>Time</th><th>Food</th><th>Len</th><th>Death</th></tr><tr><td>1</td><td>4</td><td>8760.3</td><td>120.1s</td><td>42</td><td>42</td><td>Unknown</td></tr><tr><td>2</td><td>136</td><td>8065.8</td><td>121.0s</td><td>39</td><td>39</td><td>Unknown</td></tr><tr><td>3</td><td>52</td><td>7487.8</td><td>122.2s</td><td>36</td><td>36</td><td>Unknown</td></tr><tr><td>4</td><td>220</td><td>6977.2</td><td>120.0s</td><td>33</td><td>33</td><td>Unknown</td></tr><tr><td>5</td><td>19</td><td>6819.1</td><td>126.2s</td><td>32</td><td>32</td><td>Unknown</td></tr><tr><td>6</td><td>17</td><td>6818.5</td><td>124.8s</td><td>32</td><td>32</td><td>Unknown</td></tr><tr><td>7</td><td>282</td><td>6752.5</td><td>120.0s</td><td>32</td><td>32</td><td>Unknown</td></tr><tr><td>8</td><td>95</td><td>6658.3</td><td>126.8s</td><td>31</td><td>31</td><td>Unknown</td></tr><tr><td>9</td><td>96</td><td>6616.9</td><td>125.7s</td><td>31</td><td>31</td><td>Unknown</td></tr><tr><td>10</td><td>271</td><td>6593.1</td><td>124.4s</td><td>31</td><td>31</td><td>Unknown</td></tr></table>
 <h3>LEARNING ASSESSMENT</h3>
 <p>Improvement (2nd half vs 1st half):</p>
-<p>✗ Fitness:  -301.6 (NO IMPROVEMENT)</p>
+<p>✗ Fitness:  -271.5 (NO IMPROVEMENT)</p>
 <p>✗ Food:     -0.3 (NOT LEARNING TO EAT!)</p>
 <br>
 <p>Recommendations:</p>
 <p>⚠ No fitness improvement - Consider restarting with fresh population</p>
 <br>
-<p>Analysis completed at 2026-02-04 07:52:24</p>
+<p>Analysis completed at 2026-02-04 07:53:26</p>
 <div class="chart-container">
     <canvas id="chart0"></canvas>
 </div>
@@ -61,10 +61,10 @@
 new Chart(document.getElementById('chart0'), {
     type: 'line',
     data: {
-        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59],
+        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49],
         datasets: [{
             label: 'Fitness Progress',
-            data: [np.float64(4435.4), np.float64(2321.5), np.float64(3171.4), np.float64(4888.1), np.float64(3788.7), np.float64(3837.5), np.float64(2334.8), np.float64(2381.1), np.float64(4624.6), np.float64(2398.8), np.float64(3440.6), np.float64(2428.6), np.float64(3111.3), np.float64(2412.0), np.float64(3875.6), np.float64(3062.4), np.float64(2483.0), np.float64(3008.6), np.float64(3444.7), np.float64(4378.3), np.float64(4532.3), np.float64(3088.4), np.float64(3674.9), np.float64(3870.3), np.float64(4503.9), np.float64(3169.6), np.float64(3867.7), np.float64(3789.0), np.float64(3472.1), np.float64(2381.2), np.float64(3134.5), np.float64(3674.1), np.float64(2430.0), np.float64(3913.3), np.float64(2353.7), np.float64(3763.9), np.float64(4524.4), np.float64(3098.8), np.float64(2494.9), np.float64(3979.0), np.float64(3255.7), np.float64(2379.0), np.float64(3316.7), np.float64(3093.1), np.float64(2430.5), np.float64(2550.1), np.float64(3896.4), np.float64(3841.2), np.float64(3081.7), np.float64(2441.7), np.float64(3139.3), np.float64(2314.7), np.float64(2289.0), np.float64(3693.9), np.float64(3208.9), np.float64(2330.0), np.float64(3803.3), np.float64(3883.5), np.float64(2487.6), np.float64(2358.5)],
+            data: [np.float64(4115.5), np.float64(2950.0), np.float64(3758.6), np.float64(4300.1), np.float64(3578.0), np.float64(2323.7), np.float64(2959.2), np.float64(3753.1), np.float64(2366.0), np.float64(3271.8), np.float64(3000.3), np.float64(2991.0), np.float64(3017.1), np.float64(3038.1), np.float64(2914.2), np.float64(3302.1), np.float64(3982.1), np.float64(4099.0), np.float64(3579.6), np.float64(4194.7), np.float64(4132.1), np.float64(3695.3), np.float64(3569.5), np.float64(3865.2), np.float64(2390.7), np.float64(2974.1), np.float64(3476.8), np.float64(2449.3), np.float64(3643.7), np.float64(3514.0), np.float64(4167.1), np.float64(2997.1), np.float64(3155.1), np.float64(3190.3), np.float64(2933.6), np.float64(3174.6), np.float64(2979.6), np.float64(2377.5), np.float64(3844.6), np.float64(3563.7), np.float64(2930.3), np.float64(2489.2), np.float64(2953.1), np.float64(2297.2), np.float64(3463.9), np.float64(3052.8), np.float64(2345.4), np.float64(4247.9), np.float64(3020.5), np.float64(3118.8)],
             borderColor: '#2196F3',
             backgroundColor: '#2196F322',
             fill: true,
@@ -95,10 +95,10 @@ new Chart(document.getElementById('chart0'), {
 new Chart(document.getElementById('chart1'), {
     type: 'line',
     data: {
-        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59],
+        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49],
         datasets: [{
             label: 'Food Eaten Progress',
-            data: [np.float64(30.2), np.float64(26.4), np.float64(27.6), np.float64(29.0), np.float64(27.0), np.float64(27.2), np.float64(26.2), np.float64(26.8), np.float64(28.4), np.float64(26.8), np.float64(29.0), np.float64(27.4), np.float64(26.8), np.float64(27.0), np.float64(27.4), np.float64(26.6), np.float64(27.8), np.float64(26.2), np.float64(31.2), np.float64(31.8), np.float64(27.4), np.float64(26.6), np.float64(26.8), np.float64(28.2), np.float64(27.6), np.float64(27.2), np.float64(27.4), np.float64(27.0), np.float64(29.0), np.float64(27.0), np.float64(27.0), np.float64(26.6), np.float64(27.0), np.float64(27.8), np.float64(26.6), np.float64(27.0), np.float64(27.8), np.float64(26.8), np.float64(28.4), np.float64(28.0), np.float64(29.0), np.float64(26.8), np.float64(28.8), np.float64(27.2), np.float64(27.4), np.float64(28.8), np.float64(27.6), np.float64(27.6), np.float64(27.0), np.float64(27.2), np.float64(27.4), np.float64(26.4), np.float64(26.0), np.float64(26.4), np.float64(27.8), np.float64(26.6), np.float64(27.2), np.float64(27.2), np.float64(27.6), np.float64(27.0)],
+            data: [np.float64(29.8), np.float64(26.8), np.float64(28.0), np.float64(27.8), np.float64(27.0), np.float64(26.2), np.float64(26.8), np.float64(28.7), np.float64(26.7), np.float64(28.8), np.float64(26.8), np.float64(27.0), np.float64(27.0), np.float64(27.7), np.float64(26.3), np.float64(30.8), np.float64(30.3), np.float64(26.7), np.float64(27.5), np.float64(28.0), np.float64(27.3), np.float64(27.5), np.float64(27.2), np.float64(28.5), np.float64(27.2), np.float64(26.7), np.float64(26.7), np.float64(27.3), np.float64(27.5), np.float64(26.8), np.float64(27.7), np.float64(26.8), np.float64(28.8), np.float64(28.8), np.float64(26.8), np.float64(28.7), np.float64(27.2), np.float64(26.7), np.float64(29.8), np.float64(27.2), np.float64(26.7), np.float64(27.7), np.float64(26.8), np.float64(26.2), np.float64(26.3), np.float64(27.5), np.float64(26.7), np.float64(27.5), np.float64(27.3), np.float64(27.8)],
             borderColor: '#4CAF50',
             backgroundColor: '#4CAF5022',
             fill: true,
@@ -129,10 +129,10 @@ new Chart(document.getElementById('chart1'), {
 new Chart(document.getElementById('chart2'), {
     type: 'line',
     data: {
-        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59],
+        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49],
         datasets: [{
             label: 'Snake Length Progress',
-            data: [np.float64(30.2), np.float64(26.4), np.float64(27.6), np.float64(29.0), np.float64(27.0), np.float64(27.2), np.float64(26.2), np.float64(26.8), np.float64(28.4), np.float64(26.8), np.float64(29.0), np.float64(27.4), np.float64(26.8), np.float64(27.0), np.float64(27.4), np.float64(26.6), np.float64(27.8), np.float64(26.2), np.float64(31.2), np.float64(31.8), np.float64(27.4), np.float64(26.6), np.float64(26.8), np.float64(28.2), np.float64(27.6), np.float64(27.2), np.float64(27.4), np.float64(27.0), np.float64(29.0), np.float64(27.0), np.float64(27.0), np.float64(26.6), np.float64(27.0), np.float64(27.8), np.float64(26.6), np.float64(27.0), np.float64(27.8), np.float64(26.8), np.float64(28.4), np.float64(28.0), np.float64(29.0), np.float64(26.8), np.float64(28.8), np.float64(27.2), np.float64(27.4), np.float64(28.8), np.float64(27.6), np.float64(27.6), np.float64(27.0), np.float64(27.2), np.float64(27.4), np.float64(26.4), np.float64(26.0), np.float64(26.4), np.float64(27.8), np.float64(26.6), np.float64(27.2), np.float64(27.2), np.float64(27.6), np.float64(27.0)],
+            data: [np.float64(29.8), np.float64(26.8), np.float64(28.0), np.float64(27.8), np.float64(27.0), np.float64(26.2), np.float64(26.8), np.float64(28.7), np.float64(26.7), np.float64(28.8), np.float64(26.8), np.float64(27.0), np.float64(27.0), np.float64(27.7), np.float64(26.3), np.float64(30.8), np.float64(30.3), np.float64(26.7), np.float64(27.5), np.float64(28.0), np.float64(27.3), np.float64(27.5), np.float64(27.2), np.float64(28.5), np.float64(27.2), np.float64(26.7), np.float64(26.7), np.float64(27.3), np.float64(27.5), np.float64(26.8), np.float64(27.7), np.float64(26.8), np.float64(28.8), np.float64(28.8), np.float64(26.8), np.float64(28.7), np.float64(27.2), np.float64(26.7), np.float64(29.8), np.float64(27.2), np.float64(26.7), np.float64(27.7), np.float64(26.8), np.float64(26.2), np.float64(26.3), np.float64(27.5), np.float64(26.7), np.float64(27.5), np.float64(27.3), np.float64(27.8)],
             borderColor: '#FF9800',
             backgroundColor: '#FF980022',
             fill: true,
@@ -156,7 +156,7 @@ new Chart(document.getElementById('chart2'), {
 });
 </script>
 
-<p class="timestamp">Report generated: 2026-02-04 07:52:24</p>
+<p class="timestamp">Report generated: 2026-02-04 07:53:26</p>
 </div>
 </body>
 </html>
